Fix `overflow-x` value for headings

--- a/src/style/writing-conventions/heading.scss
+++ b/src/style/writing-conventions/heading.scss
@@ -8,7 +8,7 @@
   color: $heading-color;
   font-family: $heading-font-family;
   line-height: 1.5;
-  overflow-x: scroll;
+  overflow-x: auto;
   padding-top: 10px;
 }
 
